Turning off rasterio test

--- a/check_gds_stack.ipynb
+++ b/check_gds_stack.ipynb
@@ -633,6 +633,24 @@
     "db.plot(column='INC', scheme='fisher_jenks', cmap=plt.matplotlib.cm.Blues)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "import numpy as np\n",
+    "source = rio.open('../labs/figs/lab03_GBOverview.tif', 'r')\n",
+    "red = source.read(1)\n",
+    "green = source.read(2)\n",
+    "blue = source.read(3)\n",
+    "pix = np.dstack((red, green, blue))\n",
+    "bounds = (source.bounds.left, source.bounds.right, \\\n",
+    "          source.bounds.bottom, source.bounds.top)\n",
+    "f = plt.figure(figsize=(6, 6))\n",
+    "ax = plt.imshow(pix, extent=bounds)"
+   ]
   }
  ],
  "metadata": {
