Additional checks in notebook

--- a/check_gds_stack.ipynb
+++ b/check_gds_stack.ipynb
@@ -12,6 +12,87 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/dani/anaconda/envs/gds/bin/python\n",
+      "/Users/dani/anaconda/envs/gds/bin/jupyter\n"
+     ]
+    }
+   ],
+   "source": [
+    "! which python\n",
+    "! which jupyter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.11.1\n",
+      "<module 'numpy' from '/Users/dani/anaconda/envs/gds/lib/python2.7/site-packages/numpy/__init__.pyc'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy; print(numpy.__version__); print(numpy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.2.1\n",
+      "<module 'geopandas' from '/Users/dani/anaconda/envs/gds/lib/python2.7/site-packages/geopandas/__init__.pyc'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import geopandas; print(geopandas.__version__); print(geopandas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.18.1\n",
+      "<module 'pandas' from '/Users/dani/anaconda/envs/gds/lib/python2.7/site-packages/pandas/__init__.pyc'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas; print(pandas.__version__); print(pandas)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
