Advancing on testing of R/Python functionality (Python ready, R unfinished)

--- a/check_r_stack.ipynb
+++ b/check_r_stack.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Check `GDS` stack\n",
+    "# Check `GDS` R stack\n",
     "\n",
     "This notebook checks all software requirements for the course Geographic Data Science are correctly installed. \n",
     "\n",
@@ -290,9 +290,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
