--- a/check_py_stack.ipynb
+++ b/check_py_stack.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Check `GDS` stack\n",
+    "# Check `GDS` Python stack\n",
     "\n",
     "This notebook checks all software requirements for the course Geographic Data Science are correctly installed. \n",
     "\n",
@@ -60,6 +60,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datashader as ds\n",
+    "float(ds.__version__[:3]) >= 0.6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import palettable as pltt\n",
+    "float(pltt.__version__[:3]) >= 3.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.palplot(pltt.matplotlib.Viridis_10.hex_colors)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -93,6 +122,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import dask\n",
+    "float(dask.__version__[:4]) >= 0.17"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import sklearn\n",
     "float(sklearn.__version__[:4]) >= 0.17"
    ]
@@ -105,6 +144,15 @@
    "source": [
     "import statsmodels.api as sm\n",
     "float(sm.version.version[:3]) >= 0.6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pymc3 as pm"
    ]
   },
   {
@@ -127,6 +175,33 @@
    "outputs": [],
    "source": [
     "import xlsxwriter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import networkx as nx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import osmnx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import osmnx as ox"
    ]
   },
   {
@@ -203,6 +278,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "db[['AREA', 'PERIMETER']].to_feather('db.feather')\n",
+    "tst = pd.read_feather('db.feather')\n",
+    "! rm db.feather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "f, ax = plt.subplots(1)\n",
@@ -251,6 +337,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "city = ox.gdf_from_place('Berkeley, California')\n",
+    "ox.plot_shape(ox.project_gdf(city));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import numpy as np\n",
     "import contextily as ctx\n",
     "tl = ctx.tile_providers.ST_TONER_LITE\n",
@@ -270,7 +366,28 @@
     "bounds = (source.bounds.left, source.bounds.right, \\\n",
     "          source.bounds.bottom, source.bounds.top)\n",
     "f = plt.figure(figsize=(6, 6))\n",
-    "ax = plt.imshow(pix, extent=bounds)"
+    "ax = plt.imshow(pix, extent=bounds)\n",
+    "\n",
+    "! rm us.tif"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ipyleaflet import Map, basemaps, basemap_to_tiles, SplitMapControl\n",
+    "\n",
+    "m = Map(center=(42.6824, 365.581), zoom=5)\n",
+    "\n",
+    "right_layer = basemap_to_tiles(basemaps.NASAGIBS.ModisTerraTrueColorCR, \"2017-11-11\")\n",
+    "left_layer = basemap_to_tiles(basemaps.NASAGIBS.ModisAquaBands721CR, \"2017-11-11\")\n",
+    "\n",
+    "control = SplitMapControl(left_layer=left_layer, right_layer=right_layer)\n",
+    "m.add_control(control)\n",
+    "\n",
+    "m"
    ]
   }
  ],
@@ -290,9 +407,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
