Fixing R check so it runs correctly when it works

--- a/check_r_stack.ipynb
+++ b/check_r_stack.ipynb
@@ -20,34 +20,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "library(tmap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "library(arm)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(classInt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(deldir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(devtools)"
    ]
   },
   {
@@ -65,25 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "library(GISTools)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "library(gstat)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(hdf5r)"
    ]
   },
   {
@@ -281,15 +245,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "library(rlas)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "library(rmarkdown)"
    ]
   },
@@ -380,16 +335,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "library(tidyverse)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(tmap)"
+    "# Tidyverse\n",
+    "library(ggplot2)\n",
+    "library(tibble)\n",
+    "library(tidyr)\n",
+    "library(readr)\n",
+    "library(purrr)\n",
+    "library(stringr)\n",
+    "library(forcats)"
    ]
   },
   {
@@ -399,33 +352,6 @@
    "outputs": [],
    "source": [
     "library(tufte)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(geoR)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(geosphere)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(rhdf5)"
    ]
   },
   {
@@ -471,27 +397,25 @@
     "               palette=\"-RdYlBu\", contrast=1, \n",
     "               title.size=\"Metro population\", \n",
     "               title.col=\"Growth rate (%)\", id=\"name\") + \n",
-    "    tm_style_gray() + tm_format_World()"
+    "    tm_style_gray() + tm_format_World()\n",
+    "\n",
+    "mapWorld"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "display_name": "R",
+   "language": "R",
+   "name": "ir"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "codemirror_mode": "r",
+   "file_extension": ".r",
+   "mimetype": "text/x-r-source",
+   "name": "R",
+   "pygments_lexer": "r",
+   "version": "3.4.4"
   }
  },
  "nbformat": 4,
