Updating check notebooks

--- a/check_py_stack.ipynb
+++ b/check_py_stack.ipynb
@@ -240,7 +240,7 @@
    "outputs": [],
    "source": [
     "import pysal as ps\n",
-    "float(ps.version[:4]) >= 1.11"
+    "float(ps.__version__[:4]) >= 1.11"
    ]
   },
   {
@@ -356,7 +356,7 @@
     "w, s, e, n = db.to_crs(epsg=3857).total_bounds\n",
     "dbp = db.to_crs(epsg=3857)\n",
     "# Download raster\n",
-    "_ = ctx.bounds2raster(w, s, e, n, 4, 'us.tif', url=tl)\n",
+    "_ = ctx.bounds2raster(w, s, e, n, 'us.tif', url=tl)\n",
     "# Load up and plot\n",
     "source = rio.open('us.tif', 'r')\n",
     "red = source.read(1)\n",
@@ -369,6 +369,16 @@
     "ax = plt.imshow(pix, extent=bounds)\n",
     "\n",
     "! rm us.tif"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = db.to_crs(epsg=3857).plot()\n",
+    "ctx.add_basemap(ax)"
    ]
   },
   {
