--- a/check_py_stack.ipynb
+++ b/check_py_stack.ipynb
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "import bokeh as bk\n",
-    "float(bk.__version__[:4]) >= 0.12"
+    "float(bk.__version__[:1]) >= 1"
    ]
   },
   {
@@ -123,7 +123,7 @@
    "outputs": [],
    "source": [
     "import dask\n",
-    "float(dask.__version__[:4]) >= 0.17"
+    "float(dask.__version__[:1]) >= 1"
    ]
   },
   {
@@ -133,7 +133,7 @@
    "outputs": [],
    "source": [
     "import sklearn\n",
-    "float(sklearn.__version__[:4]) >= 0.17"
+    "float(sklearn.__version__[:4]) >= 0.20"
    ]
   },
   {
@@ -143,7 +143,7 @@
    "outputs": [],
    "source": [
     "import statsmodels.api as sm\n",
-    "float(sm.version.version[:3]) >= 0.6"
+    "float(sm.version.version[:3]) >= 0.9"
    ]
   },
   {
@@ -152,7 +152,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pymc3 as pm"
+    "import pymc3 as pm\n",
+    "float(pm.__version__[:3]) >= 3.6 "
    ]
   },
   {
@@ -196,15 +197,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import osmnx as ox"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -218,7 +210,7 @@
    "outputs": [],
    "source": [
     "import fiona\n",
-    "float(fiona.__version__[:3]) >= 1.7"
+    "float(fiona.__version__[:3]) >= 1.8"
    ]
   },
   {
@@ -228,7 +220,7 @@
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
-    "float(gpd.__version__[:3]) >= 0.2"
+    "float(gpd.__version__[:3]) >= 0.4"
    ]
   },
   {
@@ -240,7 +232,7 @@
    "outputs": [],
    "source": [
     "import pysal as ps\n",
-    "float(ps.__version__[:4]) >= 1.11"
+    "float(ps.__version__[:1]) >= 2"
    ]
   },
   {
@@ -251,7 +243,8 @@
    },
    "outputs": [],
    "source": [
-    "import rasterio as rio"
+    "import rasterio as rio\n",
+    "float(rio.__version__[:1]) >= 1"
    ]
   },
   {
@@ -267,7 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shp = ps.examples.get_path('columbus.shp')\n",
+    "shp = ps.lib.examples.get_path('columbus.shp')\n",
     "db = gpd.read_file(shp)\n",
     "db.head()"
    ]
@@ -322,13 +315,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pysal.viz.splot.mapping import vba_choropleth\n",
+    "\n",
+    "f, ax = vba_choropleth(db['INC'], db['HOVAL'], db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "db.plot(column='INC', scheme='fisher_jenks', cmap=plt.matplotlib.cm.Blues)\n",
-    "plt.show()"
+    "# Out until geopandas 0.5 comes in\n",
+    "#db.plot(column='INC', scheme='fisher_jenks', cmap=plt.matplotlib.cm.Blues)\n",
+    "#plt.show()"
    ]
   },
   {
@@ -337,8 +342,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city = ox.gdf_from_place('Berkeley, California')\n",
-    "ox.plot_shape(ox.project_gdf(city));"
+    "city = osmnx.gdf_from_place('Berkeley, California')\n",
+    "osmnx.plot_shape(osmnx.project_gdf(city));"
    ]
   },
   {
@@ -351,7 +356,7 @@
     "import contextily as ctx\n",
     "tl = ctx.tile_providers.ST_TONER_LITE\n",
     "\n",
-    "db = gpd.read_file(ps.examples.get_path('us48.shp'))\n",
+    "db = gpd.read_file(ps.lib.examples.get_path('us48.shp'))\n",
     "db.crs = {'init': 'epsg:4326'}\n",
     "w, s, e, n = db.to_crs(epsg=3857).total_bounds\n",
     "dbp = db.to_crs(epsg=3857)\n",
@@ -417,7 +422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
