Add traminer, feather to notebook check

--- a/check_r_stack.ipynb
+++ b/check_r_stack.ipynb
@@ -38,6 +38,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "library(feather)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "library(ggmap)"
    ]
   },
@@ -343,6 +352,15 @@
     "library(purrr)\n",
     "library(stringr)\n",
     "library(forcats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "library(traminer)"
    ]
   },
   {
