--- a/check_py_stack.ipynb
+++ b/check_py_stack.ipynb
@@ -34,6 +34,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import black"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import matplotlib as mpl\n",
     "float(mpl.__version__[:3]) >= 1.5"
    ]
@@ -124,6 +133,15 @@
    "source": [
     "import dask\n",
     "float(dask.__version__[:1]) >= 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dask_ml"
    ]
   },
   {
@@ -245,6 +263,15 @@
    "source": [
     "import rasterio as rio\n",
     "float(rio.__version__[:1]) >= 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import rasterstats"
    ]
   },
   {
@@ -422,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
