--- a/check_r_stack.ipynb
+++ b/check_r_stack.ipynb
@@ -360,7 +360,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "library(traminer)"
+    "library(TraMineR)"
    ]
   },
   {
@@ -433,9 +433,9 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
