Switch check for statsmodels. This fixes #22

--- a/gds_py/check_py_stack.ipynb
+++ b/gds_py/check_py_stack.ipynb
@@ -456,7 +456,7 @@
    "outputs": [],
    "source": [
     "import statsmodels.api as sm\n",
-    "float(sm.__version__[:3]) >= 0.9"
+    "float(sm.__version__[2:4]) >= 10"
    ]
   },
   {
