Update py checker

--- a/gds_py/check_py_stack.ipynb
+++ b/gds_py/check_py_stack.ipynb
@@ -17,15 +17,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import bambi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import black"
    ]
   },
@@ -224,7 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pymc3"
+    "import pygeoda"
    ]
   },
   {
@@ -234,15 +225,6 @@
    "outputs": [],
    "source": [
     "import pysal"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pystan"
    ]
   },
   {
@@ -297,6 +279,15 @@
    "outputs": [],
    "source": [
     "import seaborn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import spatialpandas"
    ]
   },
   {
@@ -426,7 +417,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "float(pd.__version__[:4]) >= 0.18"
+    "float(pd.__version__[:3]) >= 1"
    ]
   },
   {
@@ -457,16 +448,6 @@
    "source": [
     "import statsmodels.api as sm\n",
     "float(sm.__version__[2:4]) >= 10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pymc3 as pm\n",
-    "float(pm.__version__[:3]) >= 3.6 "
    ]
   },
   {
@@ -567,7 +548,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.crs['init'] = 'epsg:26918'"
+    "db.crs = 'EPSG:26918'"
    ]
   },
   {
@@ -587,7 +568,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pysal.viz.splot.mapping import vba_choropleth\n",
+    "from pysal.viz import splot\n",
+    "from splot.mapping import vba_choropleth\n",
     "\n",
     "f, ax = vba_choropleth(db['INC'], db['HOVAL'], db)"
    ]
@@ -625,7 +607,7 @@
     "tl = ctx.providers.CartoDB.Positron\n",
     "\n",
     "db = geopandas.read_file(ps.lib.examples.get_path('us48.shp'))\n",
-    "db.crs = {'init': 'epsg:4326'}\n",
+    "db.crs = \"EPSG:4326\"\n",
     "dbp = db.to_crs(epsg=3857)\n",
     "w, s, e, n = dbp.total_bounds\n",
     "# Download raster\n",
@@ -651,7 +633,7 @@
    "outputs": [],
    "source": [
     "ax = db.plot()\n",
-    "ctx.add_basemap(ax, crs=db.crs)"
+    "ctx.add_basemap(ax, crs=db.crs.to_string())"
    ]
   },
   {
@@ -690,7 +672,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
