--- a/check_r_stack.ipynb
+++ b/check_r_stack.ipynb
@@ -20,15 +20,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "library(tmap)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "library(arm)"
    ]
   },
@@ -39,6 +30,15 @@
    "outputs": [],
    "source": [
     "library(feather)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "library(geojsonio)"
    ]
   },
   {
@@ -75,6 +75,15 @@
    "outputs": [],
    "source": [
     "library(igraph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "library(kableExtra)"
    ]
   },
   {
@@ -360,6 +369,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "library(tmap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "library(TraMineR)"
    ]
   },
@@ -385,7 +403,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = st_read('/opt/conda/lib/python3.7/site-packages/pysal/lib/examples/nat/NAT.shp')"
+    "db = st_read('https://ndownloader.figshare.com/files/20232174')"
    ]
   },
   {
@@ -394,7 +412,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot(db$geometry)"
+    "plot(db$geom)"
    ]
   },
   {
@@ -433,7 +451,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
