Add warning for pygeoda in check

--- a/gds_py/check_py_stack.ipynb
+++ b/gds_py/check_py_stack.ipynb
@@ -224,7 +224,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pygeoda"
+    "try:\n",
+    "    import pygeoda\n",
+    "except:\n",
+    "    import warnings\n",
+    "    warnings.warn(\"pygeoda not installed. This may be \"\\\n",
+    "                  \"because the check it's not running on the \"\\\n",
+    "                  \"official container\")"
    ]
   },
   {
